[gd_scene load_steps=12 format=3 uid="uid://xxxxxxxxxxxxx"]

[ext_resource type="Script" path="res://scenes/ui/game_ui/game_ui.gd" id="1_xxxxx"]
[ext_resource type="Theme" path="res://resources/themes/game_theme.tres" id="2_xxxxx"]

[sub_resource type="Animation" id="Animation_card_draw"]
resource_name = "card_draw"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_card_hover"]
resource_name = "card_hover"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0, -30]
}

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_xxxxx")
script = ExtResource("1_xxxxx")

[node name="Background" type="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0862745, 0.0862745, 0.0862745, 0.9)

[node name="TopBar" type="HBoxContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="PlayerStats" type="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HP" type="Label"]
layout_mode = 2
text = "生命值: 10/10"

[node name="Energy" type="Label"]
layout_mode = 2
text = "能量: 3/3"

[node name="TurnInfo" type="Label"]
layout_mode = 2
size_flags_horizontal = 3
text = "回合 1"
horizontal_alignment = 1

[node name="DeckInfo" type="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="DrawPile" type="Label"]
layout_mode = 2
text = "抽牌堆: 30"

[node name="DiscardPile" type="Label"]
layout_mode = 2
text = "弃牌堆: 0"

[node name="HandContainer" type="HBoxContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="CardSlot" type="Panel" type="Panel"]
custom_minimum_size = Vector2(120, 180)
layout_mode = 2

[node name="EndTurnButton" type="Button"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "结束回合"

[node name="AnimationPlayer" type="AnimationPlayer"]
libraries = {
"": SubResource("AnimationLibrary_xxxxx")
}

[node name="StatusEffects" type="HBoxContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 80.0
offset_right = 100.0
offset_bottom = 120.0
grow_horizontal = 2
alignment = 1

[node name="EnergyDisplay" type="Label"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "3"
horizontal_alignment = 1
vertical_alignment = 1 